tests/should_succeed/main_funny_arg_names.jou
import "stdlib/io.jou"

# Usually the args are named "argc" and "argv" but this is also acceptable
def main(lol: int, wat: byte**) -> int:
    printf("lol = %d\n", lol)  # Output: lol = 1
    return 0
