tests/syntax_error/keyword_byte.jou
def main() -> int:
    byte = 1  # Error: expected an expression, got the 'byte' keyword
    return 0
